# XKCD

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
static/: manifest.json
static/css/: style.css
static/img/: newfavicon.psd
static/js/: sw.js
templates/: about.html  error.html  reader.html  scriptreader.html
templates/includes/: buttons.html  footer.html  header.html  scriptbtns.html  sharethis.html
