[tool.poetry]
name = "XKmodern"
version = "1.1"
description = "Read XKCD in a webapp"
authors = ["absucc"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
urllib3 = "^1.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"